--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,8 +2,21 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
     <title>Réservation</title>
+    
+    <style>
+        body {
+        width: 500px;
+        height: 300px;
+        font-size: 12px;
+        font-family: Arial, Helvetica, sans-serif;
+        border: solid;
+        border-width: 1px;
+        border-color: black;
+        padding-inline-start: 10px;
+    }
+    </style>
+    
 </head>
 <body>
     <div id="content">
