--- a/views/validation.ejs
+++ b/views/validation.ejs
@@ -2,7 +2,18 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+        width: 500px;
+        height: 300px;
+        font-size: 12px;
+        font-family: Arial, Helvetica, sans-serif;
+        border: solid;
+        border-width: 1px;
+        border-color: black;
+        padding-inline-start: 10px;
+    }
+    </style>
     <title>Validation</title>
 </head>
 <body>
